@@ -58,6 +58,7 @@
     <Compile Include="Models\PrimitiveTypesModel.cs" />
     <Compile Include="Models\DummyStringModel.cs" />
     <Compile Include="Tests\FixedWidthParser\StringTest.cs" />
+    <Compile Include="Tests\LayoutDescriptor\WriterTestBase.cs" />
     <Compile Include="Tests\LayoutDescriptor\ParserTestBase.cs" />
     <Compile Include="Tests\ParseWithTypeConverter\ParseWithCustomTypeConverterTests.cs" />
     <Compile Include="Tests\TypeConverter\CustomTypeConvertTests.cs" />
